// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`entra-agent-id - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Provision Microsoft Entra Agent Identity Blueprints, BlueprintPrincipals, and per-instance Agent Identities via Microsoft Graph, and configure OAuth 2.0 token exchange (fmi_path, OBO, cross-tenant) including the Microsoft Entra SDK for AgentID sidecar. USE FOR: Agent Identity Blueprint, BlueprintPrincipal, agent OAuth, fmi_path token exchange, agent OBO, Workload Identity Federation for agents, polyglot agent auth, Microsoft.Identity.Web.AgentIdentities. DO NOT USE FOR: standard Entra app registration (use entra-app-registration), Azure RBAC (use azure-rbac), Microsoft Foundry agent authoring (use microsoft-foundry).",
  "extractedKeywords": [
    "agent",
    "agentid",
    "agentidentities",
    "agents",
    "auth",
    "authentication",
    "authoring",
    "azure",
    "azure-rbac",
    "blueprint",
    "blueprintprincipal",
    "blueprintprincipals",
    "blueprints",
    "cli",
    "configure",
    "container",
    "cross-tenant",
    "deploy",
    "entra",
    "entra-app-registration",
    "exchange",
    "federation",
    "fmi_path",
    "foundry",
    "graph",
    "identities",
    "identity",
    "including",
    "kubernetes",
    "mcp",
    "microsoft",
    "microsoft-foundry",
    "oauth",
    "per-instance",
    "polyglot",
    "provision",
    "rbac",
    "registration",
    "security",
    "sidecar",
    "standard",
    "token",
    "workload",
  ],
  "name": "entra-agent-id",
}
`;

exports[`entra-agent-id - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agentid",
  "agentidentities",
  "agents",
  "auth",
  "authentication",
  "authoring",
  "azure",
  "azure-rbac",
  "blueprint",
  "blueprintprincipal",
  "blueprintprincipals",
  "blueprints",
  "cli",
  "configure",
  "container",
  "cross-tenant",
  "deploy",
  "entra",
  "entra-app-registration",
  "exchange",
  "federation",
  "fmi_path",
  "foundry",
  "graph",
  "identities",
  "identity",
  "including",
  "kubernetes",
  "mcp",
  "microsoft",
  "microsoft-foundry",
  "oauth",
  "per-instance",
  "polyglot",
  "provision",
  "rbac",
  "registration",
  "security",
  "sidecar",
  "standard",
  "token",
  "workload",
]
`;
